added name attributes to the home.ejs, and edited some code in the app.js

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,9 +8,9 @@
 <body>
     <h1>Create a New Post</h1>
     <form>
-        <input type="text" id="name">
-        <input type="text" id="subject">
-        <textarea name="post" id="post"></textarea>
+        <input type="text" id="author" name="author">
+        <input type="text" id="title" name="title">
+        <textarea name="content" id="content"></textarea>
         <button action="submit"></button>
     </form>
 </body>
