--- a/views/entries.ejs
+++ b/views/entries.ejs
@@ -6,6 +6,7 @@
     <title>Entries</title>
 </head>
 <body>
+    <h1>All Posts</h1>
     <% for (let i = 0; i < posts.length; i++) { %>
         <div>
             <!-- Post here -->
