Created the code for the entries.ejs file. Also made a change to the app.js code and added placeholders inside the input tags of home.ejs.

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,10 +8,10 @@
 <body>
     <h1>Create a New Post</h1>
     <form>
-        <input type="text" id="author" name="author">
-        <input type="text" id="title" name="title">
-        <textarea name="content" id="content"></textarea>
-        <button action="submit"></button>
+        <input type="text" id="author" name="author" placeholder="Name">
+        <input type="text" id="title" name="title" placeholder="Title">
+        <textarea name="content" id="content" placeholder="Write something here"></textarea>
+        <button action="submit">Submit</button>
     </form>
 </body>
 </html>
