--- a/views/entries.ejs
+++ b/views/entries.ejs
@@ -7,11 +7,18 @@
 </head>
 <body>
     <h1>All Posts</h1>
-    <% for (let i = 0; i < posts.length; i++) { %>
-        <div>
-            <!-- Post here -->
-            <!-- Add an if statement to display "No Posts Found" -->
-        </div>
+    <% if (data.length > 0) { %>
+        <% for (let i = 0; i < posts.length; i++) { %>
+            <div>
+                <h2><%= data[i].title %></h2>
+                <p>Author: <%= data[i].author %></p>
+                <p><%= data[i].content %></p>
+                <!-- Timestamp will go here -->
+            </div>
+            <hr>
+        <% } %>
+    <% } else { %>
+        <p>No posts found.</p>
     <% } %>
 </body>
 </html>
