--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Create a New Post</h1>
-    <form>
+    <form action="/submit" method="POST">
         <input type="text" id="author" name="author" placeholder="Name">
         <input type="text" id="title" name="title" placeholder="Title">
         <textarea name="content" id="content" placeholder="Write something here"></textarea>
