--- a/views/confirmation.ejs
+++ b/views/confirmation.ejs
@@ -12,5 +12,6 @@
     <p>Content: <%= post.content %></p>
     <br>
     <a href="/entries">View All Entries</a>
+    <a href="/admin-posts">View All Admin Entires</a>
 </body>
 </html>
