--- a/views/entries.ejs
+++ b/views/entries.ejs
@@ -9,12 +9,13 @@
 <body>
     <h1>All Posts</h1>
     <% if (data.length > 0) { %>
-        <% for (let i = 0; i < posts.length; i++) { %>
+        <% for (let i = 0; i < data.length; i++) { %>
             <div>
                 <h2><%= data[i].title %></h2>
                 <p>Author: <%= data[i].author %></p>
                 <p><%= data[i].content %></p>
                 <!-- Timestamp will go here -->
+                 <p><%= data[i].timestamp.toString() %></p>
             </div>
             <hr>
         <% } %>
