--- a/views/confirmation.ejs
+++ b/views/confirmation.ejs
@@ -7,9 +7,9 @@
     <title>Confirmation</title>
 </head>
 <body>
-    <h1>Thank you for your post, <%= post.author %>!</h1>
-    <p>Title: <%= post.title %></p>
-    <p>Content: <%= post.content %></p>
+    <h1>Thank you for your post, <%= details.author %>!</h1>
+    <p>Title: <%= details.title %></p>
+    <p>Content: <%= details.content %></p>
     <br>
     <a href="/entries">View All Entries</a>
 </body>
