Added my changes. Having trouble adding the current timestamp to queries.

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,8 +9,8 @@
 <body>
     <h1>Create a New Post</h1>
     <form action="/submit" method="POST">
-        <input type="text" id="author" name="author" placeholder="Name">
-        <input type="text" id="title" name="title" placeholder="Title">
+        <input type="text" id="author" name="author" placeholder="">
+        <input type="text" id="title" name="title" placeholder="">
         <textarea name="content" id="content" placeholder="Write something here"></textarea>
         <button action="submit">Submit</button>
     </form>
