Fixed, changed, and cleaned up some of the code in app.js. Fixed a typo for not sending out the timestamp on entries. Also removed the posts route because there was no purpose.

--- a/views/entries.ejs
+++ b/views/entries.ejs
@@ -14,8 +14,7 @@
                 <h2><%= data[i].title %></h2>
                 <p>Author: <%= data[i].author %></p>
                 <p><%= data[i].content %></p>
-                <!-- Timestamp will go here -->
-                 <p><%= data[i].timestamp.toString() %></p>
+                <p><%= data[i].created_at ? data[i].created_at.toString() : 'No timestamp available' %></p>
             </div>
             <hr>
         <% } %>
